<resources>
    <string name="app_name">Tempus</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="alert">Alert</string>
    <string name="arrive_by">Arrive By</string>
    <string name="all_day">All Day</string>
    <string name="start_time">Set Time</string>
    <string name="date">Set Date</string>
    <string name="create_event">Create Event</string>
    <string name="send_date">+</string>
    <string-array name="alert_times">
        <item>At time of event</item>
        <item>5 minutes before event</item>
        <item>15 minutes before event</item>
        <item>30 minutes before event</item>
        <item>1 hour before event</item>
        <item>2 hours before event</item>
        <item>1 day before event</item>
    </string-array>
</resources>